src/test/ui/bad/bad-main.rs
fn main(x: isize) { } //~ ERROR: main function has wrong type [E0580]
